@@ -171,7 +171,7 @@ typedef enum
 
 static void draw(Emacs_t*,Draw_t);
 static int escape(Emacs_t*,genchar*, int);
-static void putstring(Emacs_t*,char*);
+static int dosearch(Emacs_t*,genchar*,int);
 static void search(Emacs_t*,genchar*,int);
 static void setcursor(Emacs_t*,int, int);
 static void show_info(Emacs_t*,const char*);
@@ -599,7 +599,7 @@ update:
 				if (ep->terminal == PAPER)
 				{
 					putchar(ep->ed,'\n');
-					putstring(ep,Prompt);
+					ed_putstring(ep->ed,Prompt);
 				}
 				c = ed_getchar(ep->ed,0);
 				if (c != usrkill)
@@ -613,7 +613,7 @@ update:
 				{
 					ep->terminal = PAPER;
 					putchar(ep->ed,'\n');
-					putstring(ep,Prompt);
+					ed_putstring(ep->ed,Prompt);
 				}
 			}
 			continue;
@@ -781,14 +781,6 @@ static void show_info(Emacs_t *ep,const char *str)
 	genncpy(out,string,sizeof(string)/sizeof(*string));
 	draw(ep,UPDATE);
 }
-
-static void putstring(Emacs_t* ep,char *sp)
-{
-	int c;
-	while (c= *sp++)
-		 putchar(ep->ed,c);
-}
-
 
 static int escape(Emacs_t* ep,genchar *out,int count)
 {
@@ -1572,7 +1564,7 @@ static void draw(Emacs_t *ep,Draw_t option)
 			return;
 		}
 		*ep->cursor = '\0';
-		putstring(ep,Prompt);	/* start with prompt */
+		ed_putstring(ep->ed,Prompt);	/* start with prompt */
 	}
 	
 	/*********************
